Fixed scroll on change dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -284,7 +284,7 @@ a {
 .wip-title {
   color: var(--blue);
   font-size: 22px;
-  font-weight: 700;
+  font-weight: 600;
   margin: 5px;
   padding-top: 40px;
   text-align: center;
@@ -293,7 +293,7 @@ a {
 .wip-title-dark {
   color: var(--gold);
   font-size: 22px;
-  font-weight: 700;
+  font-weight: 600;
   margin: 5px;
   padding-top: 40px;
   text-align: center;
